--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <nav>
                 <ul>
                     <li><a href="#" data-subnav-link="poemes">Poèmes</a></li>
-                    <li><a href="#" data-subnav-link="hbd">Vœux d'anniversaire</a></li>
+                    <li><a href="#" data-subnav-link="hbd">HBD</a></li>
                     <li><a href="#" data-subnav-link="histoire">Histoire</a></li>
                 </ul>
             </nav>
